# libROM

./: .astylerc  .gitignore  .gitignore_sv  .readthedocs.yaml  .travis.yml  AUTHORS  BasisGenerator.C  BasisGenerator.h  BasisReader.C  BasisReader.h  BasisWriter.C  BasisWriter.h  CAROM_config.h.in  CHANGELOG  CITATION.cff  CMakeLists.txt  COPYRIGHT  DEIM.C  DEIM.h  DMD.C  DMD.h  Database.C  Database.h  FCMangle.h  GNAT.C  GreedyParameterPointPreDefinedSampler.C  GreedyParameterPointPreDefinedSampler.h  GreedyParameterPointRandomSampler.C  GreedyParameterPointRandomSampler.h  GreedyParameterPointSampler.C  GreedyParameterPointSampler.h  GreedyParameterPointSelector.C  GreedyParameterPointSelector.h  HDFDatabase.C  HDFDatabase.h  INSTALL  IncrementalSVD.C  IncrementalSVD.h  IncrementalSVDBasisGenerator.C  IncrementalSVDBasisGenerator.h  (+118 more)
ScalaWRAP/: CMakeLists.txt  COPYRIGHT  Doxyfile  README.md
ScalaWRAP/doc/html/: _b_l_a_s_8cpp.html  _b_l_a_s_8cpp_source.html  _b_l_a_s_8hpp.html  _b_l_a_s_8hpp_source.html  _c__interface_8cpp.html  _c__interface_8cpp_source.html  _c__interface_8h.html  _c__interface_8h_source.html  _context_8cpp.html  _context_8cpp_source.html  _context_8hpp.html  _context_8hpp_source.html  _local_matrix_8hpp.html  _local_matrix_8hpp_source.html  _m_p_i__utils_8cpp.html  _m_p_i__utils_8cpp_source.html  _m_p_i__utils_8hpp.html  _m_p_i__utils_8hpp_source.html  _r_e_a_d_m_e_8md.html  _s_v_d_8cpp.html  _s_v_d_8cpp_source.html  _s_v_d_8hpp.html  _s_v_d_8hpp_source.html  _scala_mat_8cpp.html  _scala_mat_8cpp_source.html  _scala_mat_8hpp.html  _scala_mat_8hpp_source.html  annotated.html  class_scala_w_r_a_p_1_1_context-members.html  class_scala_w_r_a_p_1_1_context.html  class_scala_w_r_a_p_1_1_local_matrix-members.html  class_scala_w_r_a_p_1_1_local_matrix.html  class_scala_w_r_a_p_1_1_scala_mat-members.html  class_scala_w_r_a_p_1_1_scala_mat.html  class_scala_w_r_a_p_1_1_scala_mat_1_1_submatrix-members.html  class_scala_w_r_a_p_1_1_scala_mat_1_1_submatrix.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  (+32 more)
ScalaWRAP/doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+51 more)
ScalaWRAP/src/: BLAS.cpp  BLAS.hpp  C_interface.cpp  C_interface.h  Context.cpp  Context.hpp  LocalMatrix.hpp  MPI_utils.cpp  MPI_utils.hpp  SVD.cpp  SVD.hpp  ScalaMat.cpp  ScalaMat.hpp
ScalaWRAP/test/: CMakeLists.txt  colmajor-global-colmajor.cpp  colmajor-global-rowmajor.cpp  rowmajor-global-colmajor.cpp  rowmajor-global-rowmajor.cpp  test-common.hpp  test-gemm.cpp  test-main.cpp  test-svd.cpp  utils.cpp
lib/: CAROM_config.h.in  CMakeLists.txt  librom.h  librom.i  run_swig.sh
lib/algo/: AdaptiveDMD.C  AdaptiveDMD.cpp  AdaptiveDMD.h  DMD.C  DMD.cpp  DMD.h  DMDc.cpp  DMDc.h  DifferentialEvolution.cpp  DifferentialEvolution.h  IncrementalDMD.cpp  IncrementalDMD.h  NonuniformDMD.C  NonuniformDMD.cpp  NonuniformDMD.h  ParametricDMD.C  ParametricDMD.cpp  ParametricDMD.h  ParametricDMDc.h  SnapshotDMD.cpp  SnapshotDMD.h
lib/algo/greedy/: GreedyCustomSampler.C  GreedyCustomSampler.cpp  GreedyCustomSampler.h  GreedyRandomSampler.C  GreedyRandomSampler.cpp  GreedyRandomSampler.h  GreedySampler.C  GreedySampler.cpp  GreedySampler.h
lib/algo/manifold_interp/: Interpolator.C  Interpolator.cpp  Interpolator.h  MatrixInterpolator.C  MatrixInterpolator.cpp  MatrixInterpolator.h  PCHIPInterpolator.cpp  PCHIPInterpolator.h  SnapshotInterpolator.cpp  SnapshotInterpolator.h  VectorInterpolater.C  VectorInterpolater.h  VectorInterpolator.C  VectorInterpolator.cpp  VectorInterpolator.h
lib/hyperreduction/: DEIM.C  DEIM.cpp  DEIM.h  GNAT.C  GNAT.cpp  GNAT.h  Hyperreduction.cpp  Hyperreduction.h  NNLS.C  NNLS.cpp  NNLS.h  QDEIM.C  QDEIM.cpp  QDEIM.h  STSampling.C  STSampling.cpp  STSampling.h  S_OPT.C  S_OPT.cpp  S_OPT.h  Utilities.C  Utilities.cpp  Utilities.h
lib/linalg/: BasisGenerator.C  BasisGenerator.cpp  BasisGenerator.h  BasisReader.C  BasisReader.cpp  BasisReader.h  BasisWriter.C  BasisWriter.cpp  BasisWriter.h  Matrix.C  Matrix.cpp  Matrix.h  NNLS.cpp  NNLS.h  Options.h  Vector.C  Vector.cpp  Vector.h  scalapack_c_wrapper.c  scalapack_f_wrapper.f90  scalapack_wrapper.h
lib/linalg/svd/: IncrementalSVD.C  IncrementalSVD.cpp  IncrementalSVD.h  IncrementalSVDBrand.cpp  IncrementalSVDBrand.h  IncrementalSVDFastUpdate.C  IncrementalSVDFastUpdate.cpp  IncrementalSVDFastUpdate.h  IncrementalSVDStandard.C  IncrementalSVDStandard.cpp  IncrementalSVDStandard.h  RandomizedSVD.C  RandomizedSVD.cpp  RandomizedSVD.h  SVD.C  SVD.cpp  SVD.h  StaticSVD.C  StaticSVD.cpp  StaticSVD.h
lib/mfem/: .Utilities.hpp.kate-swp  PointwiseSnapshot.cpp  PointwiseSnapshot.hpp  SampleMesh.cpp  SampleMesh.hpp  Utilities.cpp  Utilities.hpp
lib/utils/: CSVDatabase.C  CSVDatabase.cpp  CSVDatabase.h  DMDData.cpp  DMDData.h  Database.C  Database.cpp  Database.h  HDFDatabase.C  HDFDatabase.cpp  HDFDatabase.h  HDFDatabaseMPIO.cpp  HDFDatabaseMPIO.h  ParallelBuffer.cpp  ParallelBuffer.h  Utilities.cpp  Utilities.h  mpi_utils.cpp  mpi_utils.h
unit_tests/: CMakeLists.txt  load_samples.cpp  random_test.cpp  smoke_static.cpp  smoke_test.cpp  snapshot_interpolator_test.cpp  test_DEIM.cpp  test_DMD.cpp  test_GNAT.cpp  test_GreedyCustomSampler.cpp  test_HDFDatabase.cpp  test_IncrementalSVD.cpp  test_IncrementalSVDBrand.cpp  test_Matrix.cpp  test_MatrixInterpolator_gradients.cpp  test_NNLS.cpp  test_PCHIPInterpolator.cpp  test_QDEIM.cpp  test_QR.cpp  test_RandomizedSVD.cpp  test_SVD.cpp  test_S_OPT.cpp  test_SnapshotInterpolator.cpp  test_StaticSVD.cpp  test_Vector.cpp  test_basis_conversion.cpp  test_include.cpp  test_interpolation_gradients.cpp  uneven_dist.cpp  weak_scaling.cpp
unit_tests/baselines/basis_conversion/: test_basis.000000  test_basis_snapshot.000000
unit_tests/baselines/random/: random_100proc.out  random_25proc.out
unit_tests/basis_data/: basis.000000
unit_tests/load_samples_data/: sample2_basis.000000  sample2_snapshot.000000
unit_tests/matlab/: dmdc.m  s_opt.m
unit_tests/s_opt_data/: col4.csv  col5.csv
(+696 files in other folders)
